<resources>
    <string name="app_name">GardenWarden</string>
    <string name="tab_text_1">Plants</string>
    <string name="tab_text_2">Devices</string>
    <string name="detail_button_desc_0">Delete device</string>
    <string name="detail_button_desc_1">Don\'t watch it</string>
    <string name="detail_label_name">Device name</string>
    <string name="detail_label_id">Device id</string>
    <string name="detail_label_plants_max">Max slots</string>
    <string name="detail_label_plants_used">Slots used</string>
    <string name="detail_label_authority_0">You own the device.</string>
    <string name="detail_label_authority_1">You only watch the device. You can stop watching it.</string>

    <string name="device_add_label">ID of the device</string>
    <string name="device_add_hint">Type the ID here</string>
    <string name="device_add_button">Add device to watchlist</string>

    <string name="device_add_own_url_label">URL to connect to the device</string>
    <string name="device_add_own_url_hint">Type the URL here</string>

    <string name="device_add_own_name_label">Name your device</string>
    <string name="device_add_own_name_hint">Type the name here</string>

    <string name="device_add_own_slots_label">Number of slots</string>
    <string name="device_add_own_slots_hint">Type the number of slots available</string>

    <string name="device_add_own_button">Add your own device</string>

    <string name="login_name_hint">Username</string>
    <string name="login_pass_hint">Password</string>
    <string name="login_register_hint">Email (if you wish to register)</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>

    <string name="form_water_level">Water level:</string>
    <string name="form_time_label">Time of watering:</string>
    <string name="form_add_button">Add new plant</string>
    <string name="form_name_label">Name of plant:</string>

    <string name="form_radio_1">Low</string>
    <string name="form_radio_2">Medium</string>
    <string name="form_radio_3">High</string>
    <string name="form_radio_4">Very High</string>

    <string name="detail_plant_delete">Delete plant</string>

    <string name="detail_plant_label_name">Name of plant:</string>
    <string name="detail_plant_label_type">Type of plant:</string>
    <string name="detail_measure_list_type_label">Type:</string>
    <string name="detail_measure_list_measurement_label">Value:</string>


    <string name="toast_rename">Deleting in progress…</string>
    <string name="toast_error_names_equal">Device names are equal</string>

    <string name="error_login">Login unsuccessful. Try again.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="button_monday">M</string>
    <string name="button_tuesday">T</string>
    <string name="button_wednesday">W</string>
    <string name="button_thursday">T</string>
    <string name="button_friday">F</string>
    <string name="button_saturday">S</string>
    <string name="button_sunday">S</string>

</resources>