<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forms.plantAdd.FormFragment" >

    <Button
        android:id="@+id/form_date_picker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/form_add_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_time_picker_hours" />

    <NumberPicker
        android:id="@+id/form_time_picker_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="96dp"
        android:layout_marginLeft="96dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/form_time_picker_hours"
        app:layout_constraintVertical_bias="0.0" />

    <NumberPicker
        android:id="@+id/form_time_picker_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_label_time" />

    <TextView
        android:id="@+id/form_label_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/form_time_label"
        app:layout_constraintEnd_toEndOf="@+id/form_time_picker_hours"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_day_buttons" />

    <TextView
        android:id="@+id/form_label_water"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/form_water_level"
        app:layout_constraintEnd_toEndOf="@+id/form_label_time"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/form_label_time"
        app:layout_constraintTop_toBottomOf="@+id/form_label_name" />

    <TextView
        android:id="@+id/form_label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/form_name_label"
        app:layout_constraintStart_toStartOf="@+id/form_label_water"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/form_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/form_label_name"
        app:layout_constraintTop_toBottomOf="@+id/form_label_name" />

    <RadioGroup
        android:id="@+id/form_radiogroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="96dp"
        android:layout_marginRight="96dp"
        app:layout_constraintBottom_toTopOf="@+id/form_label_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/form_label_water"
        app:layout_constraintTop_toBottomOf="@+id/form_label_water"
        app:layout_constraintVertical_bias="0.0">

        <RadioButton
            android:id="@+id/form_radio_button1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_radio_1" />

        <RadioButton
            android:id="@+id/form_radio_button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_radio_2" />

        <RadioButton
            android:id="@+id/form_radio_button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_radio_3" />

        <RadioButton
            android:id="@+id/form_radio_button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/form_radio_4" />
    </RadioGroup>

    <LinearLayout
        android:id="@+id/form_day_buttons"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginStart="64dp"
        android:layout_marginLeft="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="64dp"
        android:layout_marginRight="64dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/form_radiogroup">

        <ToggleButton
            android:id="@+id/form_monday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_monday"
            android:textOn="@string/button_monday" />

        <ToggleButton
            android:id="@+id/form_tuesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_tuesday"
            android:textOn="@string/button_tuesday" />

        <ToggleButton
            android:id="@+id/form_wednesday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_wednesday"
            android:textOn="@string/button_wednesday" />

        <ToggleButton
            android:id="@+id/form_thursday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_thursday"
            android:textOn="@string/button_thursday" />

        <ToggleButton
            android:id="@+id/form_friday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_friday"
            android:textOn="@string/button_friday" />

        <ToggleButton
            android:id="@+id/form_saturday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_saturday"
            android:textOn="@string/button_saturday" />

        <ToggleButton
            android:id="@+id/form_sunday"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:textOff="@string/button_sunday"
            android:textOn="@string/button_sunday" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>